// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactNative renders and reorders children 1`] = `
"<native root> {}
  RCTView null
    RCTView {\\"title\\":\\"a\\"}
    RCTView {\\"title\\":\\"b\\"}
    RCTView {\\"title\\":\\"c\\"}
    RCTView {\\"title\\":\\"d\\"}
    RCTView {\\"title\\":\\"e\\"}
    RCTView {\\"title\\":\\"f\\"}
    RCTView {\\"title\\":\\"g\\"}
    RCTView {\\"title\\":\\"h\\"}
    RCTView {\\"title\\":\\"i\\"}
    RCTView {\\"title\\":\\"j\\"}
    RCTView {\\"title\\":\\"k\\"}
    RCTView {\\"title\\":\\"l\\"}
    RCTView {\\"title\\":\\"m\\"}
    RCTView {\\"title\\":\\"n\\"}
    RCTView {\\"title\\":\\"o\\"}
    RCTView {\\"title\\":\\"p\\"}
    RCTView {\\"title\\":\\"q\\"}
    RCTView {\\"title\\":\\"r\\"}
    RCTView {\\"title\\":\\"s\\"}
    RCTView {\\"title\\":\\"t\\"}"
`;

exports[`ReactNative renders and reorders children 2`] = `
"<native root> {}
  RCTView null
    RCTView {\\"title\\":\\"m\\"}
    RCTView {\\"title\\":\\"x\\"}
    RCTView {\\"title\\":\\"h\\"}
    RCTView {\\"title\\":\\"p\\"}
    RCTView {\\"title\\":\\"g\\"}
    RCTView {\\"title\\":\\"w\\"}
    RCTView {\\"title\\":\\"f\\"}
    RCTView {\\"title\\":\\"r\\"}
    RCTView {\\"title\\":\\"a\\"}
    RCTView {\\"title\\":\\"l\\"}
    RCTView {\\"title\\":\\"k\\"}
    RCTView {\\"title\\":\\"e\\"}
    RCTView {\\"title\\":\\"o\\"}
    RCTView {\\"title\\":\\"i\\"}
    RCTView {\\"title\\":\\"v\\"}
    RCTView {\\"title\\":\\"c\\"}
    RCTView {\\"title\\":\\"s\\"}
    RCTView {\\"title\\":\\"t\\"}
    RCTView {\\"title\\":\\"z\\"}
    RCTView {\\"title\\":\\"y\\"}"
`;
